// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an application with minimal config 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"data\\": {
    \\"aws_ssm_parameter\\": {
      \\"test_testPocketApp_pocketvpc_vpcssmparam_1F258A54\\": {
        \\"name\\": \\"/Shared/Vpc\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/vpc_ssm_param\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_vpcssmparam_1F258A54\\"
          }
        }
      },
      \\"test_testPocketApp_pocketvpc_privatesubnets_9DE8BF13\\": {
        \\"name\\": \\"/Shared/PrivateSubnets\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/private_subnets\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_privatesubnets_9DE8BF13\\"
          }
        }
      },
      \\"test_testPocketApp_pocketvpc_publicsubnets_39DF82A9\\": {
        \\"name\\": \\"/Shared/PublicSubnets\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/public_subnets\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_publicsubnets_39DF82A9\\"
          }
        }
      }
    },
    \\"aws_vpc\\": {
      \\"test_testPocketApp_pocketvpc_40AC0971\\": {
        \\"filter\\": [
          {
            \\"name\\": \\"vpc-id\\",
            \\"values\\": [
              \\"\${data.aws_ssm_parameter.test_testPocketApp_pocketvpc_vpcssmparam_1F258A54.value}\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/vpc\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_40AC0971\\"
          }
        }
      }
    },
    \\"aws_subnet_ids\\": {
      \\"test_testPocketApp_pocketvpc_privatesubnetids_A272E250\\": {
        \\"vpc_id\\": \\"\${data.aws_vpc.test_testPocketApp_pocketvpc_40AC0971.id}\\",
        \\"filter\\": [
          {
            \\"name\\": \\"subnet-id\\",
            \\"values\\": \\"\${split(\\\\\\",\\\\\\", data.aws_ssm_parameter.test_testPocketApp_pocketvpc_privatesubnets_9DE8BF13.value)}\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/private_subnet_ids\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_privatesubnetids_A272E250\\"
          }
        }
      },
      \\"test_testPocketApp_pocketvpc_publicsubnetids_123C258E\\": {
        \\"vpc_id\\": \\"\${data.aws_vpc.test_testPocketApp_pocketvpc_40AC0971.id}\\",
        \\"filter\\": [
          {
            \\"name\\": \\"subnet-id\\",
            \\"values\\": \\"\${split(\\\\\\",\\\\\\", data.aws_ssm_parameter.test_testPocketApp_pocketvpc_publicsubnets_39DF82A9.value)}\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/public_subnet_ids\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_publicsubnetids_123C258E\\"
          }
        }
      }
    },
    \\"aws_caller_identity\\": {
      \\"test_testPocketApp_pocketvpc_currentidentity_20783D44\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/current_identity\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_currentidentity_20783D44\\"
          }
        }
      }
    },
    \\"aws_region\\": {
      \\"test_testPocketApp_pocketvpc_currentregion_B66A0BE6\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/current_region\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_currentregion_B66A0BE6\\"
          }
        }
      }
    },
    \\"aws_kms_alias\\": {
      \\"test_testPocketApp_pocketvpc_secretsmanagerkey_4235C517\\": {
        \\"name\\": \\"alias/aws/secretsmanager\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/secrets_manager_key\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_secretsmanagerkey_4235C517\\"
          }
        }
      }
    },
    \\"aws_security_groups\\": {
      \\"test_testPocketApp_pocketvpc_defaultsecuritygroups_4DC561FB\\": {
        \\"filter\\": [
          {
            \\"name\\": \\"group-name\\",
            \\"values\\": [
              \\"default\\"
            ]
          },
          {
            \\"name\\": \\"vpc-id\\",
            \\"values\\": [
              \\"\${data.aws_vpc.test_testPocketApp_pocketvpc_40AC0971.id}\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/default_security_groups\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_defaultsecuritygroups_4DC561FB\\"
          }
        }
      }
    },
    \\"aws_route53_zone\\": {
      \\"test_testPocketApp_basednsmainhostedzone_F3E3F27E\\": {
        \\"name\\": \\"bowling.gov\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/base_dns_main_hosted_zone\\",
            \\"uniqueId\\": \\"test_testPocketApp_basednsmainhostedzone_F3E3F27E\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"aws_route53_zone\\": {
      \\"test_testPocketApp_basedns_subhostedzone_4781B3B1\\": {
        \\"name\\": \\"testing.bowling.gov\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/base_dns/subhosted_zone\\",
            \\"uniqueId\\": \\"test_testPocketApp_basedns_subhostedzone_4781B3B1\\"
          }
        }
      }
    },
    \\"aws_route53_record\\": {
      \\"test_testPocketApp_basedns_subhostedzonens_0CFB2910\\": {
        \\"name\\": \\"testing.bowling.gov\\",
        \\"records\\": \\"\${aws_route53_zone.test_testPocketApp_basedns_subhostedzone_4781B3B1.name_servers}\\",
        \\"ttl\\": 86400,
        \\"type\\": \\"NS\\",
        \\"zone_id\\": \\"\${data.aws_route53_zone.test_testPocketApp_basednsmainhostedzone_F3E3F27E.zone_id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/base_dns/subhosted_zone_ns\\",
            \\"uniqueId\\": \\"test_testPocketApp_basedns_subhostedzonens_0CFB2910\\"
          }
        }
      },
      \\"test_testPocketApp_albrecord_F540FDB1\\": {
        \\"name\\": \\"testing.bowling.gov\\",
        \\"set_identifier\\": \\"1\\",
        \\"type\\": \\"A\\",
        \\"zone_id\\": \\"\${aws_route53_zone.test_testPocketApp_basedns_subhostedzone_4781B3B1.zone_id}\\",
        \\"alias\\": [
          {
            \\"name\\": \\"\${aws_alb.test_testPocketApp_applicationloadbalancer_alb_6EA5BF17.dns_name}\\",
            \\"zone_id\\": \\"\${aws_alb.test_testPocketApp_applicationloadbalancer_alb_6EA5BF17.zone_id}\\",
            \\"evaluate_target_health\\": true
          }
        ],
        \\"weighted_routing_policy\\": [
          {
            \\"weight\\": 1
          }
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"weighted_routing_policy[0].weight\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/alb_record\\",
            \\"uniqueId\\": \\"test_testPocketApp_albrecord_F540FDB1\\"
          }
        }
      },
      \\"test_testPocketApp_albcertificate_certificaterecord_3757BF9E\\": {
        \\"name\\": \\"\${tolist(aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9.domain_validation_options)[0].resource_record_name}\\",
        \\"records\\": [
          \\"\${tolist(aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9.domain_validation_options)[0].resource_record_value}\\"
        ],
        \\"ttl\\": 60,
        \\"type\\": \\"\${tolist(aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9.domain_validation_options)[0].resource_record_type}\\",
        \\"zone_id\\": \\"\${aws_route53_zone.test_testPocketApp_basedns_subhostedzone_4781B3B1.zone_id}\\",
        \\"depends_on\\": [
          \\"aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/alb_certificate/certificate_record\\",
            \\"uniqueId\\": \\"test_testPocketApp_albcertificate_certificaterecord_3757BF9E\\"
          }
        }
      }
    },
    \\"aws_security_group\\": {
      \\"test_testPocketApp_applicationloadbalancer_albsecuritygroup_C4F681E3\\": {
        \\"description\\": \\"External security group\\",
        \\"egress\\": [
          {
            \\"from_port\\": 80,
            \\"to_port\\": 80,
            \\"protocol\\": \\"TCP\\",
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null,
            \\"self\\": null
          }
        ],
        \\"ingress\\": [
          {
            \\"from_port\\": 443,
            \\"to_port\\": 443,
            \\"protocol\\": \\"TCP\\",
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null,
            \\"self\\": null
          },
          {
            \\"from_port\\": 80,
            \\"to_port\\": 80,
            \\"protocol\\": \\"TCP\\",
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null,
            \\"self\\": null
          }
        ],
        \\"name\\": \\"testapp--HTTP/S Security Group\\",
        \\"tags\\": {
          \\"Name\\": \\"testapp--HTTP/S Security Group\\"
        },
        \\"vpc_id\\": \\"\${data.aws_vpc.test_testPocketApp_pocketvpc_40AC0971.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/application_load_balancer/alb_security_group\\",
            \\"uniqueId\\": \\"test_testPocketApp_applicationloadbalancer_albsecuritygroup_C4F681E3\\"
          }
        }
      }
    },
    \\"aws_alb\\": {
      \\"test_testPocketApp_applicationloadbalancer_alb_6EA5BF17\\": {
        \\"internal\\": false,
        \\"name_prefix\\": \\"TSTAPP\\",
        \\"security_groups\\": [
          \\"\${aws_security_group.test_testPocketApp_applicationloadbalancer_albsecuritygroup_C4F681E3.id}\\"
        ],
        \\"subnets\\": \\"\${data.aws_subnet_ids.test_testPocketApp_pocketvpc_publicsubnetids_123C258E.ids}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/application_load_balancer/alb\\",
            \\"uniqueId\\": \\"test_testPocketApp_applicationloadbalancer_alb_6EA5BF17\\"
          }
        }
      }
    },
    \\"aws_acm_certificate\\": {
      \\"test_testPocketApp_albcertificate_5D7B27A9\\": {
        \\"domain_name\\": \\"testing.bowling.gov\\",
        \\"validation_method\\": \\"DNS\\",
        \\"lifecycle\\": {
          \\"create_before_destroy\\": true
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/alb_certificate/certificate\\",
            \\"uniqueId\\": \\"test_testPocketApp_albcertificate_5D7B27A9\\"
          }
        }
      }
    },
    \\"aws_acm_certificate_validation\\": {
      \\"test_testPocketApp_albcertificate_certificatevalidation_D21A3E9E\\": {
        \\"certificate_arn\\": \\"\${aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9.arn}\\",
        \\"validation_record_fqdns\\": [
          \\"\${aws_route53_record.test_testPocketApp_albcertificate_certificaterecord_3757BF9E.fqdn}\\"
        ],
        \\"depends_on\\": [
          \\"aws_route53_record.test_testPocketApp_albcertificate_certificaterecord_3757BF9E\\",
          \\"aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/alb_certificate/certificate_validation\\",
            \\"uniqueId\\": \\"test_testPocketApp_albcertificate_certificatevalidation_D21A3E9E\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders an external application 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"data\\": {
    \\"aws_ssm_parameter\\": {
      \\"test_testPocketApp_pocketvpc_vpcssmparam_1F258A54\\": {
        \\"name\\": \\"/Shared/Vpc\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/vpc_ssm_param\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_vpcssmparam_1F258A54\\"
          }
        }
      },
      \\"test_testPocketApp_pocketvpc_privatesubnets_9DE8BF13\\": {
        \\"name\\": \\"/Shared/PrivateSubnets\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/private_subnets\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_privatesubnets_9DE8BF13\\"
          }
        }
      },
      \\"test_testPocketApp_pocketvpc_publicsubnets_39DF82A9\\": {
        \\"name\\": \\"/Shared/PublicSubnets\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/public_subnets\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_publicsubnets_39DF82A9\\"
          }
        }
      }
    },
    \\"aws_vpc\\": {
      \\"test_testPocketApp_pocketvpc_40AC0971\\": {
        \\"filter\\": [
          {
            \\"name\\": \\"vpc-id\\",
            \\"values\\": [
              \\"\${data.aws_ssm_parameter.test_testPocketApp_pocketvpc_vpcssmparam_1F258A54.value}\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/vpc\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_40AC0971\\"
          }
        }
      }
    },
    \\"aws_subnet_ids\\": {
      \\"test_testPocketApp_pocketvpc_privatesubnetids_A272E250\\": {
        \\"vpc_id\\": \\"\${data.aws_vpc.test_testPocketApp_pocketvpc_40AC0971.id}\\",
        \\"filter\\": [
          {
            \\"name\\": \\"subnet-id\\",
            \\"values\\": \\"\${split(\\\\\\",\\\\\\", data.aws_ssm_parameter.test_testPocketApp_pocketvpc_privatesubnets_9DE8BF13.value)}\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/private_subnet_ids\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_privatesubnetids_A272E250\\"
          }
        }
      },
      \\"test_testPocketApp_pocketvpc_publicsubnetids_123C258E\\": {
        \\"vpc_id\\": \\"\${data.aws_vpc.test_testPocketApp_pocketvpc_40AC0971.id}\\",
        \\"filter\\": [
          {
            \\"name\\": \\"subnet-id\\",
            \\"values\\": \\"\${split(\\\\\\",\\\\\\", data.aws_ssm_parameter.test_testPocketApp_pocketvpc_publicsubnets_39DF82A9.value)}\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/public_subnet_ids\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_publicsubnetids_123C258E\\"
          }
        }
      }
    },
    \\"aws_caller_identity\\": {
      \\"test_testPocketApp_pocketvpc_currentidentity_20783D44\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/current_identity\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_currentidentity_20783D44\\"
          }
        }
      }
    },
    \\"aws_region\\": {
      \\"test_testPocketApp_pocketvpc_currentregion_B66A0BE6\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/current_region\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_currentregion_B66A0BE6\\"
          }
        }
      }
    },
    \\"aws_kms_alias\\": {
      \\"test_testPocketApp_pocketvpc_secretsmanagerkey_4235C517\\": {
        \\"name\\": \\"alias/aws/secretsmanager\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/secrets_manager_key\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_secretsmanagerkey_4235C517\\"
          }
        }
      }
    },
    \\"aws_security_groups\\": {
      \\"test_testPocketApp_pocketvpc_defaultsecuritygroups_4DC561FB\\": {
        \\"filter\\": [
          {
            \\"name\\": \\"group-name\\",
            \\"values\\": [
              \\"default\\"
            ]
          },
          {
            \\"name\\": \\"vpc-id\\",
            \\"values\\": [
              \\"\${data.aws_vpc.test_testPocketApp_pocketvpc_40AC0971.id}\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/default_security_groups\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_defaultsecuritygroups_4DC561FB\\"
          }
        }
      }
    },
    \\"aws_route53_zone\\": {
      \\"test_testPocketApp_basednsmainhostedzone_F3E3F27E\\": {
        \\"name\\": \\"bowling.gov\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/base_dns_main_hosted_zone\\",
            \\"uniqueId\\": \\"test_testPocketApp_basednsmainhostedzone_F3E3F27E\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"aws_route53_zone\\": {
      \\"test_testPocketApp_basedns_subhostedzone_4781B3B1\\": {
        \\"name\\": \\"testing.bowling.gov\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/base_dns/subhosted_zone\\",
            \\"uniqueId\\": \\"test_testPocketApp_basedns_subhostedzone_4781B3B1\\"
          }
        }
      }
    },
    \\"aws_route53_record\\": {
      \\"test_testPocketApp_basedns_subhostedzonens_0CFB2910\\": {
        \\"name\\": \\"testing.bowling.gov\\",
        \\"records\\": \\"\${aws_route53_zone.test_testPocketApp_basedns_subhostedzone_4781B3B1.name_servers}\\",
        \\"ttl\\": 86400,
        \\"type\\": \\"NS\\",
        \\"zone_id\\": \\"\${data.aws_route53_zone.test_testPocketApp_basednsmainhostedzone_F3E3F27E.zone_id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/base_dns/subhosted_zone_ns\\",
            \\"uniqueId\\": \\"test_testPocketApp_basedns_subhostedzonens_0CFB2910\\"
          }
        }
      },
      \\"test_testPocketApp_albrecord_F540FDB1\\": {
        \\"name\\": \\"direct.testing.bowling.gov\\",
        \\"set_identifier\\": \\"1\\",
        \\"type\\": \\"A\\",
        \\"zone_id\\": \\"\${aws_route53_zone.test_testPocketApp_basedns_subhostedzone_4781B3B1.zone_id}\\",
        \\"alias\\": [
          {
            \\"name\\": \\"\${aws_alb.test_testPocketApp_applicationloadbalancer_alb_6EA5BF17.dns_name}\\",
            \\"zone_id\\": \\"\${aws_alb.test_testPocketApp_applicationloadbalancer_alb_6EA5BF17.zone_id}\\",
            \\"evaluate_target_health\\": true
          }
        ],
        \\"weighted_routing_policy\\": [
          {
            \\"weight\\": 1
          }
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"weighted_routing_policy[0].weight\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/alb_record\\",
            \\"uniqueId\\": \\"test_testPocketApp_albrecord_F540FDB1\\"
          }
        }
      },
      \\"test_testPocketApp_albcertificate_certificaterecord_3757BF9E\\": {
        \\"name\\": \\"\${tolist(aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9.domain_validation_options)[0].resource_record_name}\\",
        \\"records\\": [
          \\"\${tolist(aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9.domain_validation_options)[0].resource_record_value}\\"
        ],
        \\"ttl\\": 60,
        \\"type\\": \\"\${tolist(aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9.domain_validation_options)[0].resource_record_type}\\",
        \\"zone_id\\": \\"\${aws_route53_zone.test_testPocketApp_basedns_subhostedzone_4781B3B1.zone_id}\\",
        \\"depends_on\\": [
          \\"aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/alb_certificate/certificate_record\\",
            \\"uniqueId\\": \\"test_testPocketApp_albcertificate_certificaterecord_3757BF9E\\"
          }
        }
      },
      \\"test_testPocketApp_cdncertificate_certificaterecord_160E21D6\\": {
        \\"name\\": \\"\${tolist(aws_acm_certificate.test_testPocketApp_cdncertificate_AFEB56DD.domain_validation_options)[0].resource_record_name}\\",
        \\"records\\": [
          \\"\${tolist(aws_acm_certificate.test_testPocketApp_cdncertificate_AFEB56DD.domain_validation_options)[0].resource_record_value}\\"
        ],
        \\"ttl\\": 60,
        \\"type\\": \\"\${tolist(aws_acm_certificate.test_testPocketApp_cdncertificate_AFEB56DD.domain_validation_options)[0].resource_record_type}\\",
        \\"zone_id\\": \\"\${aws_route53_zone.test_testPocketApp_basedns_subhostedzone_4781B3B1.zone_id}\\",
        \\"depends_on\\": [
          \\"aws_acm_certificate.test_testPocketApp_cdncertificate_AFEB56DD\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/cdn_certificate/certificate_record\\",
            \\"uniqueId\\": \\"test_testPocketApp_cdncertificate_certificaterecord_160E21D6\\"
          }
        }
      },
      \\"test_testPocketApp_cdnrecord_46585F67\\": {
        \\"name\\": \\"testing.bowling.gov\\",
        \\"set_identifier\\": \\"2\\",
        \\"type\\": \\"A\\",
        \\"zone_id\\": \\"\${aws_route53_zone.test_testPocketApp_basedns_subhostedzone_4781B3B1.zone_id}\\",
        \\"alias\\": [
          {
            \\"name\\": \\"\${aws_cloudfront_distribution.test_testPocketApp_cloudfrontdistribution_D4F6A9E3.domain_name}\\",
            \\"zone_id\\": \\"\${aws_cloudfront_distribution.test_testPocketApp_cloudfrontdistribution_D4F6A9E3.hosted_zone_id}\\",
            \\"evaluate_target_health\\": true
          }
        ],
        \\"weighted_routing_policy\\": [
          {
            \\"weight\\": 1
          }
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"weighted_routing_policy[0].weight\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/cdn_record\\",
            \\"uniqueId\\": \\"test_testPocketApp_cdnrecord_46585F67\\"
          }
        }
      }
    },
    \\"aws_security_group\\": {
      \\"test_testPocketApp_applicationloadbalancer_albsecuritygroup_C4F681E3\\": {
        \\"description\\": \\"External security group\\",
        \\"egress\\": [
          {
            \\"from_port\\": 80,
            \\"to_port\\": 80,
            \\"protocol\\": \\"TCP\\",
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null,
            \\"self\\": null
          }
        ],
        \\"ingress\\": [
          {
            \\"from_port\\": 443,
            \\"to_port\\": 443,
            \\"protocol\\": \\"TCP\\",
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null,
            \\"self\\": null
          },
          {
            \\"from_port\\": 80,
            \\"to_port\\": 80,
            \\"protocol\\": \\"TCP\\",
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null,
            \\"self\\": null
          }
        ],
        \\"name\\": \\"testapp--HTTP/S Security Group\\",
        \\"tags\\": {
          \\"Name\\": \\"testapp--HTTP/S Security Group\\"
        },
        \\"vpc_id\\": \\"\${data.aws_vpc.test_testPocketApp_pocketvpc_40AC0971.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/application_load_balancer/alb_security_group\\",
            \\"uniqueId\\": \\"test_testPocketApp_applicationloadbalancer_albsecuritygroup_C4F681E3\\"
          }
        }
      }
    },
    \\"aws_alb\\": {
      \\"test_testPocketApp_applicationloadbalancer_alb_6EA5BF17\\": {
        \\"internal\\": false,
        \\"name_prefix\\": \\"TSTAPP\\",
        \\"security_groups\\": [
          \\"\${aws_security_group.test_testPocketApp_applicationloadbalancer_albsecuritygroup_C4F681E3.id}\\"
        ],
        \\"subnets\\": \\"\${data.aws_subnet_ids.test_testPocketApp_pocketvpc_publicsubnetids_123C258E.ids}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/application_load_balancer/alb\\",
            \\"uniqueId\\": \\"test_testPocketApp_applicationloadbalancer_alb_6EA5BF17\\"
          }
        }
      }
    },
    \\"aws_acm_certificate\\": {
      \\"test_testPocketApp_albcertificate_5D7B27A9\\": {
        \\"domain_name\\": \\"direct.testing.bowling.gov\\",
        \\"validation_method\\": \\"DNS\\",
        \\"lifecycle\\": {
          \\"create_before_destroy\\": true
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/alb_certificate/certificate\\",
            \\"uniqueId\\": \\"test_testPocketApp_albcertificate_5D7B27A9\\"
          }
        }
      },
      \\"test_testPocketApp_cdncertificate_AFEB56DD\\": {
        \\"domain_name\\": \\"testing.bowling.gov\\",
        \\"validation_method\\": \\"DNS\\",
        \\"lifecycle\\": {
          \\"create_before_destroy\\": true
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/cdn_certificate/certificate\\",
            \\"uniqueId\\": \\"test_testPocketApp_cdncertificate_AFEB56DD\\"
          }
        }
      }
    },
    \\"aws_acm_certificate_validation\\": {
      \\"test_testPocketApp_albcertificate_certificatevalidation_D21A3E9E\\": {
        \\"certificate_arn\\": \\"\${aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9.arn}\\",
        \\"validation_record_fqdns\\": [
          \\"\${aws_route53_record.test_testPocketApp_albcertificate_certificaterecord_3757BF9E.fqdn}\\"
        ],
        \\"depends_on\\": [
          \\"aws_route53_record.test_testPocketApp_albcertificate_certificaterecord_3757BF9E\\",
          \\"aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/alb_certificate/certificate_validation\\",
            \\"uniqueId\\": \\"test_testPocketApp_albcertificate_certificatevalidation_D21A3E9E\\"
          }
        }
      },
      \\"test_testPocketApp_cdncertificate_certificatevalidation_1B082CB1\\": {
        \\"certificate_arn\\": \\"\${aws_acm_certificate.test_testPocketApp_cdncertificate_AFEB56DD.arn}\\",
        \\"validation_record_fqdns\\": [
          \\"\${aws_route53_record.test_testPocketApp_cdncertificate_certificaterecord_160E21D6.fqdn}\\"
        ],
        \\"depends_on\\": [
          \\"aws_route53_record.test_testPocketApp_cdncertificate_certificaterecord_160E21D6\\",
          \\"aws_acm_certificate.test_testPocketApp_cdncertificate_AFEB56DD\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/cdn_certificate/certificate_validation\\",
            \\"uniqueId\\": \\"test_testPocketApp_cdncertificate_certificatevalidation_1B082CB1\\"
          }
        }
      }
    },
    \\"aws_cloudfront_distribution\\": {
      \\"test_testPocketApp_cloudfrontdistribution_D4F6A9E3\\": {
        \\"aliases\\": [
          \\"testing.bowling.gov\\"
        ],
        \\"comment\\": \\"CDN for direct.testing.bowling.gov\\",
        \\"enabled\\": true,
        \\"price_class\\": \\"PriceClass_200\\",
        \\"default_cache_behavior\\": [
          {
            \\"target_origin_id\\": \\"Alb\\",
            \\"viewer_protocol_policy\\": \\"redirect-to-https\\",
            \\"compress\\": true,
            \\"allowed_methods\\": [
              \\"GET\\",
              \\"HEAD\\",
              \\"OPTIONS\\",
              \\"PUT\\",
              \\"POST\\",
              \\"PATCH\\",
              \\"DELETE\\"
            ],
            \\"cached_methods\\": [
              \\"GET\\",
              \\"HEAD\\",
              \\"OPTIONS\\"
            ],
            \\"forwarded_values\\": [
              {
                \\"query_string\\": true,
                \\"headers\\": [
                  \\"Accept\\",
                  \\"Origin\\",
                  \\"Authorization\\"
                ],
                \\"cookies\\": [
                  {
                    \\"forward\\": \\"none\\"
                  }
                ]
              }
            ]
          }
        ],
        \\"origin\\": [
          {
            \\"domain_name\\": \\"\${aws_route53_record.test_testPocketApp_albrecord_F540FDB1.fqdn}\\",
            \\"origin_id\\": \\"Alb\\",
            \\"custom_origin_config\\": [
              {
                \\"http_port\\": 80,
                \\"https_port\\": 443,
                \\"origin_protocol_policy\\": \\"https-only\\",
                \\"origin_ssl_protocols\\": [
                  \\"TLSv1.1\\",
                  \\"TLSv1.2\\"
                ]
              }
            ]
          }
        ],
        \\"restrictions\\": [
          {
            \\"geo_restriction\\": [
              {
                \\"restriction_type\\": \\"none\\"
              }
            ]
          }
        ],
        \\"viewer_certificate\\": [
          {
            \\"acm_certificate_arn\\": \\"\${aws_acm_certificate.test_testPocketApp_cdncertificate_AFEB56DD.arn}\\",
            \\"ssl_support_method\\": \\"sni-only\\",
            \\"minimum_protocol_version\\": \\"TLSv1.1_2016\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/cloudfront_distribution\\",
            \\"uniqueId\\": \\"test_testPocketApp_cloudfrontdistribution_D4F6A9E3\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders an internal application 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"data\\": {
    \\"aws_ssm_parameter\\": {
      \\"test_testPocketApp_pocketvpc_vpcssmparam_1F258A54\\": {
        \\"name\\": \\"/Shared/Vpc\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/vpc_ssm_param\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_vpcssmparam_1F258A54\\"
          }
        }
      },
      \\"test_testPocketApp_pocketvpc_privatesubnets_9DE8BF13\\": {
        \\"name\\": \\"/Shared/PrivateSubnets\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/private_subnets\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_privatesubnets_9DE8BF13\\"
          }
        }
      },
      \\"test_testPocketApp_pocketvpc_publicsubnets_39DF82A9\\": {
        \\"name\\": \\"/Shared/PublicSubnets\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/public_subnets\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_publicsubnets_39DF82A9\\"
          }
        }
      }
    },
    \\"aws_vpc\\": {
      \\"test_testPocketApp_pocketvpc_40AC0971\\": {
        \\"filter\\": [
          {
            \\"name\\": \\"vpc-id\\",
            \\"values\\": [
              \\"\${data.aws_ssm_parameter.test_testPocketApp_pocketvpc_vpcssmparam_1F258A54.value}\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/vpc\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_40AC0971\\"
          }
        }
      }
    },
    \\"aws_subnet_ids\\": {
      \\"test_testPocketApp_pocketvpc_privatesubnetids_A272E250\\": {
        \\"vpc_id\\": \\"\${data.aws_vpc.test_testPocketApp_pocketvpc_40AC0971.id}\\",
        \\"filter\\": [
          {
            \\"name\\": \\"subnet-id\\",
            \\"values\\": \\"\${split(\\\\\\",\\\\\\", data.aws_ssm_parameter.test_testPocketApp_pocketvpc_privatesubnets_9DE8BF13.value)}\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/private_subnet_ids\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_privatesubnetids_A272E250\\"
          }
        }
      },
      \\"test_testPocketApp_pocketvpc_publicsubnetids_123C258E\\": {
        \\"vpc_id\\": \\"\${data.aws_vpc.test_testPocketApp_pocketvpc_40AC0971.id}\\",
        \\"filter\\": [
          {
            \\"name\\": \\"subnet-id\\",
            \\"values\\": \\"\${split(\\\\\\",\\\\\\", data.aws_ssm_parameter.test_testPocketApp_pocketvpc_publicsubnets_39DF82A9.value)}\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/public_subnet_ids\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_publicsubnetids_123C258E\\"
          }
        }
      }
    },
    \\"aws_caller_identity\\": {
      \\"test_testPocketApp_pocketvpc_currentidentity_20783D44\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/current_identity\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_currentidentity_20783D44\\"
          }
        }
      }
    },
    \\"aws_region\\": {
      \\"test_testPocketApp_pocketvpc_currentregion_B66A0BE6\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/current_region\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_currentregion_B66A0BE6\\"
          }
        }
      }
    },
    \\"aws_kms_alias\\": {
      \\"test_testPocketApp_pocketvpc_secretsmanagerkey_4235C517\\": {
        \\"name\\": \\"alias/aws/secretsmanager\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/secrets_manager_key\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_secretsmanagerkey_4235C517\\"
          }
        }
      }
    },
    \\"aws_security_groups\\": {
      \\"test_testPocketApp_pocketvpc_defaultsecuritygroups_4DC561FB\\": {
        \\"filter\\": [
          {
            \\"name\\": \\"group-name\\",
            \\"values\\": [
              \\"default\\"
            ]
          },
          {
            \\"name\\": \\"vpc-id\\",
            \\"values\\": [
              \\"\${data.aws_vpc.test_testPocketApp_pocketvpc_40AC0971.id}\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/default_security_groups\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_defaultsecuritygroups_4DC561FB\\"
          }
        }
      }
    },
    \\"aws_route53_zone\\": {
      \\"test_testPocketApp_basednsmainhostedzone_F3E3F27E\\": {
        \\"name\\": \\"bowling.gov\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/base_dns_main_hosted_zone\\",
            \\"uniqueId\\": \\"test_testPocketApp_basednsmainhostedzone_F3E3F27E\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"aws_route53_zone\\": {
      \\"test_testPocketApp_basedns_subhostedzone_4781B3B1\\": {
        \\"name\\": \\"testing.bowling.gov\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/base_dns/subhosted_zone\\",
            \\"uniqueId\\": \\"test_testPocketApp_basedns_subhostedzone_4781B3B1\\"
          }
        }
      }
    },
    \\"aws_route53_record\\": {
      \\"test_testPocketApp_basedns_subhostedzonens_0CFB2910\\": {
        \\"name\\": \\"testing.bowling.gov\\",
        \\"records\\": \\"\${aws_route53_zone.test_testPocketApp_basedns_subhostedzone_4781B3B1.name_servers}\\",
        \\"ttl\\": 86400,
        \\"type\\": \\"NS\\",
        \\"zone_id\\": \\"\${data.aws_route53_zone.test_testPocketApp_basednsmainhostedzone_F3E3F27E.zone_id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/base_dns/subhosted_zone_ns\\",
            \\"uniqueId\\": \\"test_testPocketApp_basedns_subhostedzonens_0CFB2910\\"
          }
        }
      },
      \\"test_testPocketApp_albrecord_F540FDB1\\": {
        \\"name\\": \\"testing.bowling.gov\\",
        \\"set_identifier\\": \\"1\\",
        \\"type\\": \\"A\\",
        \\"zone_id\\": \\"\${aws_route53_zone.test_testPocketApp_basedns_subhostedzone_4781B3B1.zone_id}\\",
        \\"alias\\": [
          {
            \\"name\\": \\"\${aws_alb.test_testPocketApp_applicationloadbalancer_alb_6EA5BF17.dns_name}\\",
            \\"zone_id\\": \\"\${aws_alb.test_testPocketApp_applicationloadbalancer_alb_6EA5BF17.zone_id}\\",
            \\"evaluate_target_health\\": true
          }
        ],
        \\"weighted_routing_policy\\": [
          {
            \\"weight\\": 1
          }
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"weighted_routing_policy[0].weight\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/alb_record\\",
            \\"uniqueId\\": \\"test_testPocketApp_albrecord_F540FDB1\\"
          }
        }
      },
      \\"test_testPocketApp_albcertificate_certificaterecord_3757BF9E\\": {
        \\"name\\": \\"\${tolist(aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9.domain_validation_options)[0].resource_record_name}\\",
        \\"records\\": [
          \\"\${tolist(aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9.domain_validation_options)[0].resource_record_value}\\"
        ],
        \\"ttl\\": 60,
        \\"type\\": \\"\${tolist(aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9.domain_validation_options)[0].resource_record_type}\\",
        \\"zone_id\\": \\"\${aws_route53_zone.test_testPocketApp_basedns_subhostedzone_4781B3B1.zone_id}\\",
        \\"depends_on\\": [
          \\"aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/alb_certificate/certificate_record\\",
            \\"uniqueId\\": \\"test_testPocketApp_albcertificate_certificaterecord_3757BF9E\\"
          }
        }
      }
    },
    \\"aws_security_group\\": {
      \\"test_testPocketApp_applicationloadbalancer_albsecuritygroup_C4F681E3\\": {
        \\"description\\": \\"External security group\\",
        \\"egress\\": [
          {
            \\"from_port\\": 80,
            \\"to_port\\": 80,
            \\"protocol\\": \\"TCP\\",
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null,
            \\"self\\": null
          }
        ],
        \\"ingress\\": [
          {
            \\"from_port\\": 443,
            \\"to_port\\": 443,
            \\"protocol\\": \\"TCP\\",
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null,
            \\"self\\": null
          },
          {
            \\"from_port\\": 80,
            \\"to_port\\": 80,
            \\"protocol\\": \\"TCP\\",
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null,
            \\"self\\": null
          }
        ],
        \\"name\\": \\"testapp--HTTP/S Security Group\\",
        \\"tags\\": {
          \\"Name\\": \\"testapp--HTTP/S Security Group\\"
        },
        \\"vpc_id\\": \\"\${data.aws_vpc.test_testPocketApp_pocketvpc_40AC0971.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/application_load_balancer/alb_security_group\\",
            \\"uniqueId\\": \\"test_testPocketApp_applicationloadbalancer_albsecuritygroup_C4F681E3\\"
          }
        }
      }
    },
    \\"aws_alb\\": {
      \\"test_testPocketApp_applicationloadbalancer_alb_6EA5BF17\\": {
        \\"internal\\": true,
        \\"name_prefix\\": \\"TSTAPP\\",
        \\"security_groups\\": [
          \\"\${aws_security_group.test_testPocketApp_applicationloadbalancer_albsecuritygroup_C4F681E3.id}\\"
        ],
        \\"subnets\\": \\"\${data.aws_subnet_ids.test_testPocketApp_pocketvpc_privatesubnetids_A272E250.ids}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/application_load_balancer/alb\\",
            \\"uniqueId\\": \\"test_testPocketApp_applicationloadbalancer_alb_6EA5BF17\\"
          }
        }
      }
    },
    \\"aws_acm_certificate\\": {
      \\"test_testPocketApp_albcertificate_5D7B27A9\\": {
        \\"domain_name\\": \\"testing.bowling.gov\\",
        \\"validation_method\\": \\"DNS\\",
        \\"lifecycle\\": {
          \\"create_before_destroy\\": true
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/alb_certificate/certificate\\",
            \\"uniqueId\\": \\"test_testPocketApp_albcertificate_5D7B27A9\\"
          }
        }
      }
    },
    \\"aws_acm_certificate_validation\\": {
      \\"test_testPocketApp_albcertificate_certificatevalidation_D21A3E9E\\": {
        \\"certificate_arn\\": \\"\${aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9.arn}\\",
        \\"validation_record_fqdns\\": [
          \\"\${aws_route53_record.test_testPocketApp_albcertificate_certificaterecord_3757BF9E.fqdn}\\"
        ],
        \\"depends_on\\": [
          \\"aws_route53_record.test_testPocketApp_albcertificate_certificaterecord_3757BF9E\\",
          \\"aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/alb_certificate/certificate_validation\\",
            \\"uniqueId\\": \\"test_testPocketApp_albcertificate_certificatevalidation_D21A3E9E\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders an internal application with tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"data\\": {
    \\"aws_ssm_parameter\\": {
      \\"test_testPocketApp_pocketvpc_vpcssmparam_1F258A54\\": {
        \\"name\\": \\"/Shared/Vpc\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/vpc_ssm_param\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_vpcssmparam_1F258A54\\"
          }
        }
      },
      \\"test_testPocketApp_pocketvpc_privatesubnets_9DE8BF13\\": {
        \\"name\\": \\"/Shared/PrivateSubnets\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/private_subnets\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_privatesubnets_9DE8BF13\\"
          }
        }
      },
      \\"test_testPocketApp_pocketvpc_publicsubnets_39DF82A9\\": {
        \\"name\\": \\"/Shared/PublicSubnets\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/public_subnets\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_publicsubnets_39DF82A9\\"
          }
        }
      }
    },
    \\"aws_vpc\\": {
      \\"test_testPocketApp_pocketvpc_40AC0971\\": {
        \\"filter\\": [
          {
            \\"name\\": \\"vpc-id\\",
            \\"values\\": [
              \\"\${data.aws_ssm_parameter.test_testPocketApp_pocketvpc_vpcssmparam_1F258A54.value}\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/vpc\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_40AC0971\\"
          }
        }
      }
    },
    \\"aws_subnet_ids\\": {
      \\"test_testPocketApp_pocketvpc_privatesubnetids_A272E250\\": {
        \\"vpc_id\\": \\"\${data.aws_vpc.test_testPocketApp_pocketvpc_40AC0971.id}\\",
        \\"filter\\": [
          {
            \\"name\\": \\"subnet-id\\",
            \\"values\\": \\"\${split(\\\\\\",\\\\\\", data.aws_ssm_parameter.test_testPocketApp_pocketvpc_privatesubnets_9DE8BF13.value)}\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/private_subnet_ids\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_privatesubnetids_A272E250\\"
          }
        }
      },
      \\"test_testPocketApp_pocketvpc_publicsubnetids_123C258E\\": {
        \\"vpc_id\\": \\"\${data.aws_vpc.test_testPocketApp_pocketvpc_40AC0971.id}\\",
        \\"filter\\": [
          {
            \\"name\\": \\"subnet-id\\",
            \\"values\\": \\"\${split(\\\\\\",\\\\\\", data.aws_ssm_parameter.test_testPocketApp_pocketvpc_publicsubnets_39DF82A9.value)}\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/public_subnet_ids\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_publicsubnetids_123C258E\\"
          }
        }
      }
    },
    \\"aws_caller_identity\\": {
      \\"test_testPocketApp_pocketvpc_currentidentity_20783D44\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/current_identity\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_currentidentity_20783D44\\"
          }
        }
      }
    },
    \\"aws_region\\": {
      \\"test_testPocketApp_pocketvpc_currentregion_B66A0BE6\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/current_region\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_currentregion_B66A0BE6\\"
          }
        }
      }
    },
    \\"aws_kms_alias\\": {
      \\"test_testPocketApp_pocketvpc_secretsmanagerkey_4235C517\\": {
        \\"name\\": \\"alias/aws/secretsmanager\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/secrets_manager_key\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_secretsmanagerkey_4235C517\\"
          }
        }
      }
    },
    \\"aws_security_groups\\": {
      \\"test_testPocketApp_pocketvpc_defaultsecuritygroups_4DC561FB\\": {
        \\"filter\\": [
          {
            \\"name\\": \\"group-name\\",
            \\"values\\": [
              \\"default\\"
            ]
          },
          {
            \\"name\\": \\"vpc-id\\",
            \\"values\\": [
              \\"\${data.aws_vpc.test_testPocketApp_pocketvpc_40AC0971.id}\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/pocket_vpc/default_security_groups\\",
            \\"uniqueId\\": \\"test_testPocketApp_pocketvpc_defaultsecuritygroups_4DC561FB\\"
          }
        }
      }
    },
    \\"aws_route53_zone\\": {
      \\"test_testPocketApp_basednsmainhostedzone_F3E3F27E\\": {
        \\"name\\": \\"bowling.gov\\",
        \\"tags\\": {
          \\"name\\": \\"thedude\\",
          \\"hobby\\": \\"bowling\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/base_dns_main_hosted_zone\\",
            \\"uniqueId\\": \\"test_testPocketApp_basednsmainhostedzone_F3E3F27E\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"aws_route53_zone\\": {
      \\"test_testPocketApp_basedns_subhostedzone_4781B3B1\\": {
        \\"name\\": \\"testing.bowling.gov\\",
        \\"tags\\": {
          \\"name\\": \\"thedude\\",
          \\"hobby\\": \\"bowling\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/base_dns/subhosted_zone\\",
            \\"uniqueId\\": \\"test_testPocketApp_basedns_subhostedzone_4781B3B1\\"
          }
        }
      }
    },
    \\"aws_route53_record\\": {
      \\"test_testPocketApp_basedns_subhostedzonens_0CFB2910\\": {
        \\"name\\": \\"testing.bowling.gov\\",
        \\"records\\": \\"\${aws_route53_zone.test_testPocketApp_basedns_subhostedzone_4781B3B1.name_servers}\\",
        \\"ttl\\": 86400,
        \\"type\\": \\"NS\\",
        \\"zone_id\\": \\"\${data.aws_route53_zone.test_testPocketApp_basednsmainhostedzone_F3E3F27E.zone_id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/base_dns/subhosted_zone_ns\\",
            \\"uniqueId\\": \\"test_testPocketApp_basedns_subhostedzonens_0CFB2910\\"
          }
        }
      },
      \\"test_testPocketApp_albrecord_F540FDB1\\": {
        \\"name\\": \\"testing.bowling.gov\\",
        \\"set_identifier\\": \\"1\\",
        \\"type\\": \\"A\\",
        \\"zone_id\\": \\"\${aws_route53_zone.test_testPocketApp_basedns_subhostedzone_4781B3B1.zone_id}\\",
        \\"alias\\": [
          {
            \\"name\\": \\"\${aws_alb.test_testPocketApp_applicationloadbalancer_alb_6EA5BF17.dns_name}\\",
            \\"zone_id\\": \\"\${aws_alb.test_testPocketApp_applicationloadbalancer_alb_6EA5BF17.zone_id}\\",
            \\"evaluate_target_health\\": true
          }
        ],
        \\"weighted_routing_policy\\": [
          {
            \\"weight\\": 1
          }
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"weighted_routing_policy[0].weight\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/alb_record\\",
            \\"uniqueId\\": \\"test_testPocketApp_albrecord_F540FDB1\\"
          }
        }
      },
      \\"test_testPocketApp_albcertificate_certificaterecord_3757BF9E\\": {
        \\"name\\": \\"\${tolist(aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9.domain_validation_options)[0].resource_record_name}\\",
        \\"records\\": [
          \\"\${tolist(aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9.domain_validation_options)[0].resource_record_value}\\"
        ],
        \\"ttl\\": 60,
        \\"type\\": \\"\${tolist(aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9.domain_validation_options)[0].resource_record_type}\\",
        \\"zone_id\\": \\"\${aws_route53_zone.test_testPocketApp_basedns_subhostedzone_4781B3B1.zone_id}\\",
        \\"depends_on\\": [
          \\"aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/alb_certificate/certificate_record\\",
            \\"uniqueId\\": \\"test_testPocketApp_albcertificate_certificaterecord_3757BF9E\\"
          }
        }
      }
    },
    \\"aws_security_group\\": {
      \\"test_testPocketApp_applicationloadbalancer_albsecuritygroup_C4F681E3\\": {
        \\"description\\": \\"External security group\\",
        \\"egress\\": [
          {
            \\"from_port\\": 80,
            \\"to_port\\": 80,
            \\"protocol\\": \\"TCP\\",
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null,
            \\"self\\": null
          }
        ],
        \\"ingress\\": [
          {
            \\"from_port\\": 443,
            \\"to_port\\": 443,
            \\"protocol\\": \\"TCP\\",
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null,
            \\"self\\": null
          },
          {
            \\"from_port\\": 80,
            \\"to_port\\": 80,
            \\"protocol\\": \\"TCP\\",
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"security_groups\\": null,
            \\"self\\": null
          }
        ],
        \\"name\\": \\"testapp--HTTP/S Security Group\\",
        \\"tags\\": {
          \\"name\\": \\"thedude\\",
          \\"hobby\\": \\"bowling\\",
          \\"Name\\": \\"testapp--HTTP/S Security Group\\"
        },
        \\"vpc_id\\": \\"\${data.aws_vpc.test_testPocketApp_pocketvpc_40AC0971.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/application_load_balancer/alb_security_group\\",
            \\"uniqueId\\": \\"test_testPocketApp_applicationloadbalancer_albsecuritygroup_C4F681E3\\"
          }
        }
      }
    },
    \\"aws_alb\\": {
      \\"test_testPocketApp_applicationloadbalancer_alb_6EA5BF17\\": {
        \\"internal\\": true,
        \\"name_prefix\\": \\"TSTAPP\\",
        \\"security_groups\\": [
          \\"\${aws_security_group.test_testPocketApp_applicationloadbalancer_albsecuritygroup_C4F681E3.id}\\"
        ],
        \\"subnets\\": \\"\${data.aws_subnet_ids.test_testPocketApp_pocketvpc_privatesubnetids_A272E250.ids}\\",
        \\"tags\\": {
          \\"name\\": \\"thedude\\",
          \\"hobby\\": \\"bowling\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/application_load_balancer/alb\\",
            \\"uniqueId\\": \\"test_testPocketApp_applicationloadbalancer_alb_6EA5BF17\\"
          }
        }
      }
    },
    \\"aws_acm_certificate\\": {
      \\"test_testPocketApp_albcertificate_5D7B27A9\\": {
        \\"domain_name\\": \\"testing.bowling.gov\\",
        \\"tags\\": {
          \\"name\\": \\"thedude\\",
          \\"hobby\\": \\"bowling\\"
        },
        \\"validation_method\\": \\"DNS\\",
        \\"lifecycle\\": {
          \\"create_before_destroy\\": true
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/alb_certificate/certificate\\",
            \\"uniqueId\\": \\"test_testPocketApp_albcertificate_5D7B27A9\\"
          }
        }
      }
    },
    \\"aws_acm_certificate_validation\\": {
      \\"test_testPocketApp_albcertificate_certificatevalidation_D21A3E9E\\": {
        \\"certificate_arn\\": \\"\${aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9.arn}\\",
        \\"validation_record_fqdns\\": [
          \\"\${aws_route53_record.test_testPocketApp_albcertificate_certificaterecord_3757BF9E.fqdn}\\"
        ],
        \\"depends_on\\": [
          \\"aws_route53_record.test_testPocketApp_albcertificate_certificaterecord_3757BF9E\\",
          \\"aws_acm_certificate.test_testPocketApp_albcertificate_5D7B27A9\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testPocketApp/alb_certificate/certificate_validation\\",
            \\"uniqueId\\": \\"test_testPocketApp_albcertificate_certificatevalidation_D21A3E9E\\"
          }
        }
      }
    }
  }
}"
`;

exports[`throws an error trying for an internal app with a cdn 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  }
}"
`;
